# docs/swagger.json
@@ -11,6 +11,11 @@
     "paths": {
         "/events": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create a new event with name, description, and capacity",
                 "consumes": [
                     "application/json"
@@ -59,6 +64,11 @@
         },
         "/events/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve an event's details by its unique event ID",
                 "consumes": [
                     "application/json"
@@ -103,6 +113,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update an event's name, description, and capacity by event ID",
                 "consumes": [
                     "application/json"
@@ -163,6 +178,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete an event by event ID",
                 "tags": [
                     "events"
@@ -200,6 +220,11 @@
         },
         "/tickets": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Book a ticket for an event",
                 "consumes": [
                     "application/json"
@@ -466,11 +491,14 @@
                     "type": "string"
                 },
                 "quantity": {
-                    "description": "Number of tickets booked",
                     "type": "integer"
                 },
                 "ticketID": {
                     "description": "Unique ticket ID",
+                    "type": "string"
+                },
+                "user_id": {
+                    "description": "Number of tickets booked",
                     "type": "string"
                 }
             }
@@ -532,6 +560,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
